--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "vite": "^2.9.11"
     },
     "dependencies": {
-        "alpinejs": "^3.10.2"
+        "alpinejs": "^3.10.2",
+        "clipboard": "^2.0.11"
     }
 }
